# python_package_template

./: LICENSE  cookiecutter.json  setup.py
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_test.txt  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: main.yaml
{{cookiecutter.package_name}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  _main.py
