[metadata]
name = {{ cookiecutter.package_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst, CHANGELOG.rst
author = {{ cookiecutter.name.replace('\"', '\\\"') }}"

[options]
packages = find:
include_package_data = True

{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[options.entry_points]
console_scripts =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}._cli:main
{%- endif %}

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
{%- if cookiecutter.use_pytest == 'y' %}
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
{%- endif %}

[easy_install]
index_url = https://repository.rnd.amadeus.net/repository/api/pypi/pypi/simple
